--- a/admin-files/index.html
+++ b/admin-files/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="/admin/css/style.css">
 </head>
-<body>
-    <h1>Admin Dashboard</h1>
-    <p>Welcome to the admin interface.</p>
-    <a href="/">Logout</a>
+<body class="bg-gray-100">
+    <div class="flex h-screen">
+        <nav class="w-64 bg-white shadow-md hidden md:block">
+            <div class="p-4">
+                <h2 class="text-lg font-semibold">Admin</h2>
+                <ul class="mt-4">
+                    <li><a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200">Dashboard</a></li>
+                    <li><a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200">Posts</a></li>
+                    <li><a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200">Portfolio</a></li>
+                    <li><a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200">Pages</a></li>
+                    <li><a href="/" class="block py-2 px-4 text-gray-700 hover:bg-gray-200">Logout</a></li>
+                </ul>
+            </div>
+        </nav>
+        <main class="flex-1 p-10 overflow-y-auto">
+            <h1 class="text-3xl font-bold mb-4">Admin Dashboard</h1>
+            <p class="text-gray-600">Welcome to the admin interface.</p>
+        </main>
+    </div>
 </body>
 </html>
