--- a/admin-files/index.html
+++ b/admin-files/index.html
@@ -1,29 +1,135 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="dark" lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Admin Dashboard</title>
-    <link rel="stylesheet" href="/admin/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&amp;display=swap"
+        rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
+        rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
+        rel="stylesheet" />
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <script id="tailwind-config">
+        tailwind.config = {
+            darkMode: "class",
+            theme: {
+                extend: {
+                    colors: {
+                        "primary": "#137fec",
+                        "background-light": "#f6f7f8",
+                        "background-dark": "#101922",
+                        "surface-dark": "#18232e", // A slightly lighter shade for cards in dark mode
+                        "surface-light": "#ffffff", // White for cards in light mode
+                        "border-dark": "#2a3b4c",
+                        "border-light": "#e5e7eb",
+                    },
+                    fontFamily: {
+                        "display": ["Inter", "sans-serif"]
+                    },
+                    borderRadius: { "DEFAULT": "0.25rem", "lg": "0.5rem", "xl": "0.75rem", "full": "9999px" },
+                },
+            },
+        }
+    </script>
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+    </style>
 </head>
-<body class="bg-gray-100">
-    <div class="flex h-screen">
-        <nav class="w-64 bg-white shadow-md hidden md:block">
-            <div class="p-4">
-                <h2 class="text-lg font-semibold">Admin</h2>
-                <ul class="mt-4">
-                    <li><a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200">Dashboard</a></li>
-                    <li><a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200">Posts</a></li>
-                    <li><a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200">Portfolio</a></li>
-                    <li><a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200">Pages</a></li>
-                    <li><a href="/" class="block py-2 px-4 text-gray-700 hover:bg-gray-200">Logout</a></li>
-                </ul>
+
+<body
+    class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-white font-display overflow-x-hidden transition-colors duration-200">
+    <div class="flex min-h-screen w-full">
+        <!-- Sidebar -->
+        <div
+            class="fixed inset-y-0 left-0 z-50 w-64 bg-surface-light dark:bg-surface-dark border-r border-border-light dark:border-border-dark flex flex-col justify-between p-4 shadow-lg lg:static lg:flex">
+            <div class="flex flex-col gap-6">
+                <!-- User Profile / Branding -->
+                <div class="flex gap-3 items-center pb-6 border-b border-border-light dark:border-border-dark">
+                    <div class="bg-center bg-no-repeat bg-cover rounded-full h-12 w-12 border-2 border-primary"
+                        data-alt="Profile picture of the admin user"
+                        style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDS7stXzuX1oFmiWsscJ6UQdJia4HQqQ1S3B16IX81s9nLilZo5vQ9BHxeqlt4NLtH425M6taGrBpy855X1FQs5QZ5zR4b614Pe9OSUye680Mn-KK-3gwBlS5hLP22HQ6eC6KTcc088z_JpDFT57Ea5gYr3cATEVUOQcbT_MnZ5Hpw3pfOj4f1-4dRnnid5Cm68psmooaxIMYwQBDjYdxFvDSZ3iloQdT-DW2iwFnxZnRrdpFz8wzZDsH9O0b5tiSgtFKN7kg8CTlsh");'>
+                    </div>
+                    <div class="flex flex-col">
+                        <h1 class="text-slate-900 dark:text-white text-base font-bold leading-normal">My Personal Blog
+                        </h1>
+                        <p class="text-slate-500 dark:text-slate-400 text-xs font-normal leading-normal">Admin Console
+                        </p>
+                    </div>
+                </div>
+                <!-- Navigation Links -->
+                <nav class="flex flex-col gap-2">
+                    <a class="flex items-center gap-3 px-3 py-3 rounded-lg bg-primary/10 text-primary" href="#">
+                        <span class="material-symbols-outlined fill-1">home</span>
+                        <span class="text-sm font-medium leading-normal">Dashboard</span>
+                    </a>
+                    <a class="flex items-center gap-3 px-3 py-3 rounded-lg text-slate-600 dark:text-slate-300 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors"
+                        href="">
+                        <span class="material-symbols-outlined">book_2</span>
+                        <span class="text-sm font-medium leading-normal">Blog Posts</span>
+                    </a>
+                    <a class="flex items-center gap-3 px-3 py-3 rounded-lg text-slate-600 dark:text-slate-300 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors"
+                        href="#">
+                        <span class="material-symbols-outlined">work</span>
+                        <span class="text-sm font-medium leading-normal">Portfolios</span>
+                    </a>
+                    <a class="flex items-center gap-3 px-3 py-3 rounded-lg text-slate-600 dark:text-slate-300 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors"
+                        href="#">
+                        <span class="material-symbols-outlined">code</span>
+                        <span class="text-sm font-medium leading-normal">Pages</span>
+                    </a>
+                </nav>
             </div>
-        </nav>
-        <main class="flex-1 p-10 overflow-y-auto">
-            <h1 class="text-3xl font-bold mb-4">Admin Dashboard</h1>
-            <p class="text-gray-600">Welcome to the admin interface.</p>
+            <!-- Logout Section -->
+            <div class="flex flex-col gap-1 border-t border-border-light dark:border-border-dark pt-4">
+            </div>
+        </div>
+        <!-- Main Content -->
+        <div class="flex-1 flex flex-col h-screen overflow-hidden">
+            <!-- Top Bar for Mobile (Hidden on Desktop) -->
+            <header
+                class="flex lg:hidden items-center justify-between p-4 bg-surface-light dark:bg-surface-dark border-b border-border-light dark:border-border-dark">
+                <h1 class="font-bold text-lg">Admin Dashboard</h1>
+                <button class="text-slate-500 dark:text-slate-400">
+                    <span class="material-symbols-outlined">menu</span>
+                </button>
+            </header>
+            <main
+                class="flex-1 overflow-y-auto bg-background-light dark:bg-background-dark p-4 md:p-8 lg:px-12 lg:py-10">
+                <div class="max-w-7xl mx-auto flex flex-col gap-8">
+                    <!-- Page Heading & Actions -->
+                    <div class="flex flex-col md:flex-row md:items-center justify-between gap-4">
+                        <div>
+                            <h2 class="text-slate-900 dark:text-white text-3xl font-black leading-tight tracking-tight">
+                                Admin Dashboard</h2>
+                            <p class="text-slate-500 dark:text-slate-400 mt-1">Welcome to the admin interface.
+                            </p>
+                        </div>
+                        <div class="flex gap-3">
+                            <button
+                                class="flex items-center justify-center gap-2 rounded-lg h-10 px-5 bg-primary text-white text-sm font-bold shadow-md shadow-primary/20 hover:bg-blue-600 transition-colors">
+                                <span class="material-symbols-outlined text-lg">add</span>
+                                <span>Create New Blog</span>
+                            </button>
+                        </div>
+                    </div>
+
+                </div>
+                <!-- Search and Table Container -->
+                <div
+                    class="bg-surface-light dark:bg-surface-dark rounded-xl border border-border-light dark:border-border-dark shadow-sm overflow-hidden flex flex-col">
+
+                </div>
+        </div>
         </main>
     </div>
+    </div>
 </body>
+
 </html>
