--- a/admin-files/index.html
+++ b/admin-files/index.html
@@ -65,12 +65,12 @@
                 </div>
                 <!-- Navigation Links -->
                 <nav class="flex flex-col gap-2">
-                    <a class="flex items-center gap-3 px-3 py-3 rounded-lg bg-primary/10 text-primary" href="#">
+                    <a class="flex items-center gap-3 px-3 py-3 rounded-lg bg-primary/10 text-primary" href="/admin/dashboard">
                         <span class="material-symbols-outlined fill-1">home</span>
                         <span class="text-sm font-medium leading-normal">Dashboard</span>
                     </a>
                     <a class="flex items-center gap-3 px-3 py-3 rounded-lg text-slate-600 dark:text-slate-300 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors"
-                        href="">
+                        href="/admin/posts">
                         <span class="material-symbols-outlined">book_2</span>
                         <span class="text-sm font-medium leading-normal">Blog Posts</span>
                     </a>
