add WYSIWYG's markdown editor

--- a/admin-files/post_form.html
+++ b/admin-files/post_form.html
@@ -36,6 +36,7 @@
             },
         }
     </script>
+    <link rel="stylesheet" href="/admin/vendor/easymde.min.css">
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -137,7 +138,7 @@
                             </div>
                             <div>
                                 <label for="content" class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-2">Content</label>
-                                <textarea id="content" name="content" rows="10" required
+                                <textarea id="content" name="content" rows="10"
                                     class="block w-full p-3 text-sm text-slate-900 dark:text-white bg-slate-50 dark:bg-[#111a22] border border-border-light dark:border-border-dark rounded-lg focus:ring-primary focus:border-primary"></textarea>
                             </div>
                             <div class="flex items-center">
@@ -164,6 +165,7 @@
         </main>
     </div>
     <script src="/admin/js/post_form.js"></script>
+    <script src="/admin/vendor/easymde.min.js"></script>
 </body>
 
 </html>
