--- a/admin-files/index.html
+++ b/admin-files/index.html
@@ -75,7 +75,7 @@
                         <span class="text-sm font-medium leading-normal">Blog Posts</span>
                     </a>
                     <a class="flex items-center gap-3 px-3 py-3 rounded-lg text-slate-600 dark:text-slate-300 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors"
-                        href="#">
+                        href="/admin/portfolio">
                         <span class="material-symbols-outlined">work</span>
                         <span class="text-sm font-medium leading-normal">Portfolios</span>
                     </a>
