--- a/admin-files/posts.html
+++ b/admin-files/posts.html
@@ -65,16 +65,18 @@
                 </div>
                 <!-- Navigation Links -->
                 <nav class="flex flex-col gap-2">
-                    <a class="flex items-center gap-3 px-3 py-3 rounded-lg text-slate-600 dark:text-slate-300 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors" href="/admin/dashboard">
+                    <a class="flex items-center gap-3 px-3 py-3 rounded-lg text-slate-600 dark:text-slate-300 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors"
+                        href="/admin/dashboard">
                         <span class="material-symbols-outlined fill-1">home</span>
                         <span class="text-sm font-medium leading-normal">Dashboard</span>
                     </a>
-                    <a class="flex items-center gap-3 px-3 py-3 rounded-lg bg-primary/10 text-primary" href="/admin/posts">
+                    <a class="flex items-center gap-3 px-3 py-3 rounded-lg bg-primary/10 text-primary"
+                        href="/admin/posts">
                         <span class="material-symbols-outlined">book_2</span>
                         <span class="text-sm font-medium leading-normal">Blog Posts</span>
                     </a>
                     <a class="flex items-center gap-3 px-3 py-3 rounded-lg text-slate-600 dark:text-slate-300 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors"
-                        href="#">
+                        href="/admin/portfolio">
                         <span class="material-symbols-outlined">work</span>
                         <span class="text-sm font-medium leading-normal">Portfolios</span>
                     </a>
@@ -111,70 +113,70 @@
                             </p>
                         </div>
                         <div class="flex gap-3">
-                          <a href="/admin/posts/new">
-                            <button
-                                class="flex items-center justify-center gap-2 rounded-lg h-10 px-5 bg-primary text-white text-sm font-bold shadow-md shadow-primary/20 hover:bg-blue-600 transition-colors">
-                                <span class="material-symbols-outlined text-lg">add</span>
-                                <span>Create New Blog</span>
-                            </button>
-                          </a>
+                            <a href="/admin/posts/new">
+                                <button
+                                    class="flex items-center justify-center gap-2 rounded-lg h-10 px-5 bg-primary text-white text-sm font-bold shadow-md shadow-primary/20 hover:bg-blue-600 transition-colors">
+                                    <span class="material-symbols-outlined text-lg">add</span>
+                                    <span>Create New Blog</span>
+                                </button>
+                            </a>
                         </div>
                     </div>
 
                 </div>
-                    <!-- Search and Table Container -->
+                <!-- Search and Table Container -->
+                <div
+                    class="bg-surface-light dark:bg-surface-dark rounded-xl border border-border-light dark:border-border-dark shadow-sm overflow-hidden flex flex-col">
+                    <!-- Search Bar -->
+                    <div class="p-4 border-b border-border-light dark:border-border-dark">
+                        <div class="relative w-full md:w-96">
+                            <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
+                                <span class="material-symbols-outlined text-slate-400">search</span>
+                            </div>
+                            <input
+                                class="block w-full p-2.5 pl-10 text-sm text-slate-900 dark:text-white bg-slate-50 dark:bg-[#111a22] border border-border-light dark:border-border-dark rounded-lg focus:ring-primary focus:border-primary placeholder-slate-400"
+                                placeholder="Search posts by title or content" type="text" />
+                        </div>
+                    </div>
+                    <!-- Table -->
+                    <div class="overflow-x-auto">
+                        <table class="w-full text-sm text-left text-slate-500 dark:text-slate-400">
+                            <thead
+                                class="text-xs text-slate-700 uppercase bg-slate-50 dark:bg-surface-dark dark:text-slate-300 border-b border-border-light dark:border-border-dark">
+                                <tr>
+                                    <th class="px-6 py-4 font-semibold" scope="col">Title</th>
+                                    <th class="px-6 py-4 font-semibold" scope="col">Status</th>
+                                    <th class="px-6 py-4 font-semibold text-right" scope="col">Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody class="divide-y divide-border-light dark:divide-border-dark" id="post-list-body">
+                            </tbody>
+                        </table>
+                    </div>
+                    <!-- Pagination -->
                     <div
-                        class="bg-surface-light dark:bg-surface-dark rounded-xl border border-border-light dark:border-border-dark shadow-sm overflow-hidden flex flex-col">
-                        <!-- Search Bar -->
-                        <div class="p-4 border-b border-border-light dark:border-border-dark">
-                            <div class="relative w-full md:w-96">
-                                <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
-                                    <span class="material-symbols-outlined text-slate-400">search</span>
-                                </div>
-                                <input
-                                    class="block w-full p-2.5 pl-10 text-sm text-slate-900 dark:text-white bg-slate-50 dark:bg-[#111a22] border border-border-light dark:border-border-dark rounded-lg focus:ring-primary focus:border-primary placeholder-slate-400"
-                                    placeholder="Search posts by title or content" type="text" />
-                            </div>
-                        </div>
-                        <!-- Table -->
-                        <div class="overflow-x-auto">
-                            <table class="w-full text-sm text-left text-slate-500 dark:text-slate-400">
-                                <thead
-                                    class="text-xs text-slate-700 uppercase bg-slate-50 dark:bg-surface-dark dark:text-slate-300 border-b border-border-light dark:border-border-dark">
-                                    <tr>
-                                        <th class="px-6 py-4 font-semibold" scope="col">Title</th>
-                                        <th class="px-6 py-4 font-semibold" scope="col">Status</th>
-                                        <th class="px-6 py-4 font-semibold text-right" scope="col">Actions</th>
-                                    </tr>
-                                </thead>
-                                <tbody class="divide-y divide-border-light dark:divide-border-dark" id="post-list-body">
-                                </tbody>
-                            </table>
-                        </div>
-                        <!-- Pagination -->
-                        <div
-                            class="flex items-center justify-between p-4 border-t border-border-light dark:border-border-dark bg-slate-50 dark:bg-[#111a22]">
-                            <span class="text-sm text-slate-500 dark:text-slate-400">
-                                Showing <span class="font-semibold text-slate-900 dark:text-white">1-5</span> of <span
-                                    class="font-semibold text-slate-900 dark:text-white">42</span>
-                            </span>
-                            <div class="inline-flex -space-x-px text-sm">
-                                <button
-                                    class="flex items-center justify-center px-3 h-8 ms-0 leading-tight text-slate-500 bg-white dark:bg-surface-dark border border-e-0 border-border-light dark:border-border-dark rounded-s-lg hover:bg-slate-100 dark:hover:bg-slate-800 dark:text-slate-400">Previous</button>
-                                <button
-                                    class="flex items-center justify-center px-3 h-8 leading-tight text-white bg-primary border border-primary hover:bg-blue-600 dark:border-primary dark:text-white">1</button>
-                                <button
-                                    class="flex items-center justify-center px-3 h-8 leading-tight text-slate-500 bg-white dark:bg-surface-dark border border-border-light dark:border-border-dark hover:bg-slate-100 dark:hover:bg-slate-800 dark:text-slate-400">2</button>
-                                <button
-                                    class="flex items-center justify-center px-3 h-8 leading-tight text-slate-500 bg-white dark:bg-surface-dark border border-border-light dark:border-border-dark hover:bg-slate-100 dark:hover:bg-slate-800 dark:text-slate-400">3</button>
-                                <button
-                                    class="flex items-center justify-center px-3 h-8 leading-tight text-slate-500 bg-white dark:bg-surface-dark border border-border-light dark:border-border-dark rounded-e-lg hover:bg-slate-100 dark:hover:bg-slate-800 dark:text-slate-400">Next</button>
-                            </div>
+                        class="flex items-center justify-between p-4 border-t border-border-light dark:border-border-dark bg-slate-50 dark:bg-[#111a22]">
+                        <span class="text-sm text-slate-500 dark:text-slate-400">
+                            Showing <span class="font-semibold text-slate-900 dark:text-white">1-5</span> of <span
+                                class="font-semibold text-slate-900 dark:text-white">42</span>
+                        </span>
+                        <div class="inline-flex -space-x-px text-sm">
+                            <button
+                                class="flex items-center justify-center px-3 h-8 ms-0 leading-tight text-slate-500 bg-white dark:bg-surface-dark border border-e-0 border-border-light dark:border-border-dark rounded-s-lg hover:bg-slate-100 dark:hover:bg-slate-800 dark:text-slate-400">Previous</button>
+                            <button
+                                class="flex items-center justify-center px-3 h-8 leading-tight text-white bg-primary border border-primary hover:bg-blue-600 dark:border-primary dark:text-white">1</button>
+                            <button
+                                class="flex items-center justify-center px-3 h-8 leading-tight text-slate-500 bg-white dark:bg-surface-dark border border-border-light dark:border-border-dark hover:bg-slate-100 dark:hover:bg-slate-800 dark:text-slate-400">2</button>
+                            <button
+                                class="flex items-center justify-center px-3 h-8 leading-tight text-slate-500 bg-white dark:bg-surface-dark border border-border-light dark:border-border-dark hover:bg-slate-100 dark:hover:bg-slate-800 dark:text-slate-400">3</button>
+                            <button
+                                class="flex items-center justify-center px-3 h-8 leading-tight text-slate-500 bg-white dark:bg-surface-dark border border-border-light dark:border-border-dark rounded-e-lg hover:bg-slate-100 dark:hover:bg-slate-800 dark:text-slate-400">Next</button>
                         </div>
                     </div>
                 </div>
         </div>
-        </main>
+    </div>
+    </main>
     </div>
     </div>
     <script src="/admin/js/posts.js"></script>
