--- a/admin-files/page_list.html
+++ b/admin-files/page_list.html
@@ -76,12 +76,12 @@
               <span class="material-symbols-outlined">book_2</span>
               <span class="text-sm font-medium leading-normal">Blog Posts</span>
             </a>
-            <a class="flex items-center gap-3 px-3 py-3 rounded-lg bg-primary/10 text-primary" href="/admin/portfolio">
+            <a class="flex items-center gap-3 px-3 py-3 rounded-lg text-slate-600 dark:text-slate-300 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors"
+              href="/admin/portfolio">
               <span class="material-symbols-outlined">work</span>
               <span class="text-sm font-medium leading-normal">Portfolios</span>
             </a>
-            <a class="flex items-center gap-3 px-3 py-3 rounded-lg text-slate-600 dark:text-slate-300 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors"
-              href="/admin/pages">
+            <a class="flex items-center gap-3 px-3 py-3 rounded-lg bg-primary/10 text-primary" href="/admin/pages">
               <span class="material-symbols-outlined">code</span>
               <span class="text-sm font-medium leading-normal">Pages</span>
             </a>
@@ -97,7 +97,7 @@
       <!-- Top Bar for Mobile (Hidden on Desktop) -->
       <header
         class="flex lg:hidden items-center justify-between p-4 bg-surface-light dark:bg-surface-dark border-b border-border-light dark:border-border-dark">
-        <h1 class="font-bold text-lg">Portfolio</h1>
+        <h1 class="font-bold text-lg">Pages</h1>
         <button class="text-slate-500 dark:text-slate-400">
           <span class="material-symbols-outlined">menu</span>
         </button>
@@ -108,16 +108,16 @@
           <div class="flex flex-col md:flex-row md:items-center justify-between gap-4">
             <div>
               <h2 class="text-slate-900 dark:text-white text-3xl font-black leading-tight tracking-tight">
-                Portfolio</h2>
-              <p class="text-slate-500 dark:text-slate-400 mt-1">Manage your portfolio items here.
+                Pages</h2>
+              <p class="text-slate-500 dark:text-slate-400 mt-1">Manage your pages here.
               </p>
             </div>
             <div class="flex gap-3">
-              <a href="/admin/portfolio/new">
+              <a href="/admin/pages/new">
                 <button
                   class="flex items-center justify-center gap-2 rounded-lg h-10 px-5 bg-primary text-white text-sm font-bold shadow-md shadow-primary/20 hover:bg-blue-600 transition-colors">
                   <span class="material-symbols-outlined text-lg">add</span>
-                  <span>Create New Portfolio Item</span>
+                  <span>Create New Page</span>
                 </button>
               </a>
             </div>
@@ -135,7 +135,7 @@
               </div>
               <input
                 class="block w-full p-2.5 pl-10 text-sm text-slate-900 dark:text-white bg-slate-50 dark:bg-[#111a22] border border-border-light dark:border-border-dark rounded-lg focus:ring-primary focus:border-primary placeholder-slate-400"
-                placeholder="Search portfolio items by title" type="text" />
+                placeholder="Search pages by title or slug" type="text" />
             </div>
           </div>
           <!-- Table -->
@@ -145,12 +145,13 @@
                 class="text-xs text-slate-700 uppercase bg-slate-50 dark:bg-surface-dark dark:text-slate-300 border-b border-border-light dark:border-border-dark">
                 <tr>
                   <th class="px-6 py-4 font-semibold" scope="col">Title</th>
-                  <th class="px-6 py-4 font-semibold" scope="col">Thumbnail</th>
+                  <th class="px-6 py-4 font-semibold" scope="col">Slug</th>
+                  <th class="px-6 py-4 font-semibold" scope="col">Show in Nav</th>
                   <th class="px-6 py-4 font-semibold" scope="col">Sort Order</th>
                   <th class="px-6 py-4 font-semibold text-right" scope="col">Actions</th>
                 </tr>
               </thead>
-              <tbody class="divide-y divide-border-light dark:divide-border-dark" id="portfolio-list-body">
+              <tbody class="divide-y divide-border-light dark:divide-border-dark" id="page-list-body">
               </tbody>
             </table>
           </div>
@@ -180,7 +181,7 @@
   </main>
   </div>
   </div>
-  <script src="/admin/js/portfolio_list.js"></script>
+  <script src="/admin/js/page_list.js"></script>
 </body>
 
 </html>
