--- a/admin-files/settings.html
+++ b/admin-files/settings.html
@@ -4,147 +4,105 @@
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Admin Dashboard</title>
+    <title>Settings - Admin</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&amp;display=swap"
         rel="stylesheet" />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
         rel="stylesheet" />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
-        rel="stylesheet" />
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-    <script id="tailwind-config">
-        tailwind.config = {
-            darkMode: "class",
-            theme: {
-                extend: {
-                    colors: {
-                        "primary": "#137fec",
-                        "background-light": "#f6f7f8",
-                        "background-dark": "#101922",
-                        "surface-dark": "#18232e", // A slightly lighter shade for cards in dark mode
-                        "surface-light": "#ffffff", // White for cards in light mode
-                        "border-dark": "#2a3b4c",
-                        "border-light": "#e5e7eb",
-                    },
-                    fontFamily: {
-                        "display": ["Inter", "sans-serif"]
-                    },
-                    borderRadius: { "DEFAULT": "0.25rem", "lg": "0.5rem", "xl": "0.75rem", "full": "9999px" },
-                },
-            },
-        }
-    </script>
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-        }
-    </style>
+    <link rel="stylesheet" href="/admin/css/styles.css" />
 </head>
 
-<body
-    class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-white font-display overflow-x-hidden transition-colors duration-200">
-    <div class="flex min-h-screen w-full">
+<body>
+    <div class="admin-layout">
         <!-- Sidebar -->
-        <div
-            class="fixed inset-y-0 left-0 z-50 w-64 bg-surface-light dark:bg-surface-dark border-r border-border-light dark:border-border-dark flex flex-col justify-between p-4 shadow-lg lg:static lg:flex">
-            <div class="flex flex-col gap-6">
+        <div class="sidebar">
+            <div class="sidebar-inner">
                 <!-- User Profile / Branding -->
-                <div class="flex gap-3 items-center pb-6 border-b border-border-light dark:border-border-dark">
-                    <div class="bg-center bg-no-repeat bg-cover rounded-full h-12 w-12 border-2 border-primary"
-                        data-alt="Profile picture of the admin user"
+                <div class="sidebar-brand">
+                    <div class="sidebar-avatar"
                         style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDS7stXzuX1oFmiWsscJ6UQdJia4HQqQ1S3B16IX81s9nLilZo5vQ9BHxeqlt4NLtH425M6taGrBpy855X1FQs5QZ5zR4b614Pe9OSUye680Mn-KK-3gwBlS5hLP22HQ6eC6KTcc088z_JpDFT57Ea5gYr3cATEVUOQcbT_MnZ5Hpw3pfOj4f1-4dRnnid5Cm68psmooaxIMYwQBDjYdxFvDSZ3iloQdT-DW2iwFnxZnRrdpFz8wzZDsH9O0b5tiSgtFKN7kg8CTlsh");'>
                     </div>
-                    <div class="flex flex-col">
-                        <h1 class="text-slate-900 dark:text-white text-base font-bold leading-normal">My Personal Blog
-                        </h1>
-                        <p class="text-slate-500 dark:text-slate-400 text-xs font-normal leading-normal">Admin Console
-                        </p>
+                    <div class="sidebar-info">
+                        <h1 class="sidebar-title">My Personal Blog</h1>
+                        <p class="sidebar-subtitle">Admin Console</p>
                     </div>
                 </div>
                 <!-- Navigation Links -->
-                <nav class="flex flex-col gap-2">
-                    <a class="flex items-center gap-3 px-3 py-3 rounded-lg text-slate-600 dark:text-slate-300 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors"
-                        href="/admin/dashboard">
-                        <span class="material-symbols-outlined fill-1">home</span>
-                        <span class="text-sm font-medium leading-normal">Dashboard</span>
+                <nav class="sidebar-nav">
+                    <a class="nav-item" href="/admin/dashboard">
+                        <span class="material-symbols-outlined">home</span>
+                        <span>Dashboard</span>
                     </a>
-                    <a class="flex items-center gap-3 px-3 py-3 rounded-lg text-slate-600 dark:text-slate-300 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors"
-                        href="/admin/posts">
+                    <a class="nav-item" href="/admin/posts">
                         <span class="material-symbols-outlined">book_2</span>
-                        <span class="text-sm font-medium leading-normal">Blog Posts</span>
+                        <span>Blog Posts</span>
                     </a>
-                    <a class="flex items-center gap-3 px-3 py-3 rounded-lg text-slate-600 dark:text-slate-300 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors"
-                        href="/admin/portfolio">
+                    <a class="nav-item" href="/admin/portfolio">
                         <span class="material-symbols-outlined">work</span>
-                        <span class="text-sm font-medium leading-normal">Portfolios</span>
+                        <span>Portfolios</span>
                     </a>
-                    <a class="flex items-center gap-3 px-3 py-3 rounded-lg text-slate-600 dark:text-slate-300 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors"
-                        href="/admin/pages">
+                    <a class="nav-item" href="/admin/pages">
                         <span class="material-symbols-outlined">code</span>
-                        <span class="text-sm font-medium leading-normal">Pages</span>
+                        <span>Pages</span>
                     </a>
-                    <a class="flex items-center gap-3 px-3 py-3 rounded-lg bg-primary/10 text-primary"
-                        href="/admin/settings">
+                    <a class="nav-item nav-item-active" href="/admin/settings">
                         <span class="material-symbols-outlined">settings</span>
-                        <span class="text-sm font-medium leading-normal">Settings</span>
+                        <span>Settings</span>
                     </a>
                 </nav>
             </div>
             <!-- Logout Section -->
-            <div class="flex flex-col gap-1 border-t border-border-light dark:border-border-dark pt-4">
+            <div class="sidebar-footer">
             </div>
         </div>
         <!-- Main Content -->
-        <div class="flex-1 flex flex-col h-screen overflow-hidden">
-            <!-- Top Bar for Mobile (Hidden on Desktop) -->
-            <header
-                class="flex lg:hidden items-center justify-between p-4 bg-surface-light dark:bg-surface-dark border-b border-border-light dark:border-border-dark">
-                <h1 class="font-bold text-lg">Blog Posts</h1>
-                <button class="text-slate-500 dark:text-slate-400">
+        <div class="admin-main">
+            <!-- Top Bar for Mobile -->
+            <header class="admin-header-mobile">
+                <h1 class="admin-header-title">Settings</h1>
+                <button class="admin-header-menu-btn">
                     <span class="material-symbols-outlined">menu</span>
                 </button>
             </header>
-            <main
-                class="flex-1 overflow-y-auto bg-background-light dark:bg-background-dark p-4 md:p-8 lg:px-12 lg:py-10">
-                <!-- Search and Table Container -->
-                <div class="py-6">
-                    <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
-                        <h1 class="text-2xl font-semibold text-slate-900 dark:text-white">Settings</h1>
+            <main class="admin-content">
+                <div class="admin-container">
+                    <!-- Page Heading -->
+                    <div class="admin-page-header">
+                        <div>
+                            <h2 class="admin-page-title">Settings</h2>
+                            <p class="admin-page-subtitle">Configure your site settings.</p>
+                        </div>
                     </div>
-                    <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
-                        <div class="bg-surface-light dark:bg-surface-dark shadow rounded-lg p-6">
+
+                    <!-- Settings Form Container -->
+                    <div class="admin-card">
+                        <div class="admin-card-body">
                             <form id="settingsForm">
-                                <div class="mb-4">
-                                    <label for="siteName" class="block text-sm font-medium text-slate-700 dark:text-slate-300">Site Name</label>
-                                    <input type="text" id="siteName" name="siteName" class="mt-1 block w-full rounded-md border-border-light dark:border-border-dark shadow-sm focus:border-primary focus:ring-primary sm:text-sm bg-white dark:bg-slate-800 text-slate-900 dark:text-white">
+                                <div class="form-group">
+                                    <label for="siteName" class="form-label">Site Name</label>
+                                    <input type="text" id="siteName" name="siteName" class="form-input">
                                 </div>
-                                <div class="mb-4">
-                                    <label class="block text-sm font-medium text-slate-700 dark:text-slate-300">Show Menus</label>
-                                    <div class="mt-2">
-                                        <label class="inline-flex items-center">
-                                            <input type="checkbox" id="showPortfolioMenu" name="showPortfolioMenu" class="rounded border-border-light dark:border-border-dark text-primary shadow-sm focus:border-primary focus:ring-primary">
-                                            <span class="ml-2">Show Portfolio Menu</span>
-                                        </label>
+                                <div class="form-group">
+                                    <label class="form-label">Show Menus</label>
+                                    <div class="form-checkbox-group">
+                                        <input type="checkbox" id="showPortfolioMenu" name="showPortfolioMenu" class="form-checkbox">
+                                        <label for="showPortfolioMenu" class="form-checkbox-label">Show Portfolio Menu</label>
                                     </div>
-                                    <div class="mt-2">
-                                        <label class="inline-flex items-center">
-                                            <input type="checkbox" id="showPostsMenu" name="showPostsMenu" class="rounded border-border-light dark:border-border-dark text-primary shadow-sm focus:border-primary focus:ring-primary">
-                                            <span class="ml-2">Show Posts Menu</span>
-                                        </label>
+                                    <div class="form-checkbox-group">
+                                        <input type="checkbox" id="showPostsMenu" name="showPostsMenu" class="form-checkbox">
+                                        <label for="showPostsMenu" class="form-checkbox-label">Show Posts Menu</label>
                                     </div>
                                 </div>
-                                <div class="mb-4">
-                                    <label class="block text-sm font-medium text-slate-700 dark:text-slate-300">Menu Order</label>
-                                    <ul id="menuOrderList" class="mt-1 bg-white dark:bg-slate-800 border border-border-light dark:border-border-dark rounded-md p-2 min-h-[100px]">
+                                <div class="form-group">
+                                    <label class="form-label">Menu Order</label>
+                                    <ul id="menuOrderList" class="drag-list">
                                         <!-- Menu items will be added here -->
                                     </ul>
-                                    <p class="mt-1 text-sm text-slate-500">Drag and drop to reorder menu items</p>
+                                    <p class="form-hint">Drag and drop to reorder menu items</p>
                                 </div>
-                                <button type="submit" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-primary hover:bg-primary/90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary">
-                                    Save Settings
-                                </button>
+                                <div class="form-actions">
+                                    <button type="submit" class="btn btn-primary">Save Settings</button>
+                                </div>
                             </form>
                         </div>
                     </div>
@@ -178,10 +136,10 @@
                 list.innerHTML = '';
                 menuOrder.forEach(item => {
                     const li = document.createElement('li');
-                    li.className = 'p-2 bg-slate-100 dark:bg-slate-700 rounded mb-1 cursor-move flex items-center';
+                    li.className = 'drag-item';
                     li.draggable = true;
                     li.dataset.item = item;
-                    li.innerHTML = `<span class="material-symbols-outlined mr-2">drag_indicator</span>${item}`;
+                    li.innerHTML = `<span class="material-symbols-outlined">drag_indicator</span>${item}`;
                     li.addEventListener('dragstart', handleDragStart);
                     li.addEventListener('dragend', handleDragEnd);
                     li.addEventListener('dragover', handleDragOver);
@@ -258,6 +216,6 @@
             return false;
         }
     </script>
-    </body>
+</body>
 
 </html>
