make admin sidebar title clickable and go to dashboard

--- a/admin-files/index.html
+++ b/admin-files/index.html
@@ -23,7 +23,11 @@
                         style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDS7stXzuX1oFmiWsscJ6UQdJia4HQqQ1S3B16IX81s9nLilZo5vQ9BHxeqlt4NLtH425M6taGrBpy855X1FQs5QZ5zR4b614Pe9OSUye680Mn-KK-3gwBlS5hLP22HQ6eC6KTcc088z_JpDFT57Ea5gYr3cATEVUOQcbT_MnZ5Hpw3pfOj4f1-4dRnnid5Cm68psmooaxIMYwQBDjYdxFvDSZ3iloQdT-DW2iwFnxZnRrdpFz8wzZDsH9O0b5tiSgtFKN7kg8CTlsh");'>
                     </div>
                     <div class="sidebar-info">
-                        <h1 class="sidebar-title">My Personal Blog</h1>
+                        <h1 class="sidebar-title">
+                            <a href="/admin/dashboard" class="nav-brand-link">
+                                My Personal Blog
+                            </a>
+                        </h1>
                         <p class="sidebar-subtitle">Admin Console</p>
                     </div>
                 </div>
