implement new setting page to update templates

--- a/admin-files/header.html
+++ b/admin-files/header.html
@@ -54,6 +54,10 @@
                         <span class="material-symbols-outlined">settings</span>
                         <span>Settings</span>
                     </a>
+                    <a class="nav-item{{if eq .ActiveNav "templates"}} nav-item-active{{end}}" href="/admin/templates">
+                        <span class="material-symbols-outlined">description</span>
+                        <span>Templates</span>
+                    </a>
                 </nav>
             </div>
             <!-- Logout Section -->
