feat: add database path configuration to admin dashboard

--- a/admin-files/content/dashboard.html
+++ b/admin-files/content/dashboard.html
@@ -27,6 +27,10 @@
                         <div class="admin-card-body">
                             <div class="config-grid">
                                 <div class="config-item">
+                                    <span class="config-label">Database Path</span>
+                                    <code class="config-value">{{.DBPath}}</code>
+                                </div>
+                                <div class="config-item">
                                     <span class="config-label">Template Path</span>
                                     <code class="config-value">{{.TemplatePath}}</code>
                                 </div>
